--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ p {
     background-size: 160px;
     background-repeat: no-repeat;
     background-position: right;
+    line-height: 1;
 }
 
 .newsHeader h2 {
