--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ p {
     padding: 25px;
     max-width: 940px;
     margin: 0 auto;
-    height: 1625;
+    min-height: 1645px;
     box-shadow: 0px 20px 30px 0px #00000090;
 }
 
@@ -241,3 +241,10 @@ p {
     margin-left: -440px;
 }
 
+.fancy-border {
+    border: 25px solid #B88846;
+    border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%231C1616' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
+  }
+  
+  
+  
