--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ p {
     margin: 0 auto;
     min-height: 1645px;
     box-shadow: 0px 20px 30px 0px #00000090;
+    overflow-x: hidden;
 }
 
 .headerInfo {
@@ -159,13 +160,13 @@ p {
     width: 100%;
     transition: 0.6s ease-in-out;
     transition-delay: 0.2s;
-
 }
+
 .newsBodyContainer img:hover {
     filter: unset;
     transition: 0.15s ease-in-out;
-
 }
+
 .quote {
     text-align: left!important;
     font-size: 22px!important;
@@ -186,7 +187,6 @@ p {
     clear: both;
 }
 
-
 .wrap {
     margin: auto;
     overflow: hidden;
@@ -200,7 +200,6 @@ p {
     text-align: justify;
     width: calc(50% + 320px);
 }
-
 
 .col1:before, .col2:before {
     float: right;
@@ -245,7 +244,96 @@ p {
 .fancy-border {
     border: 25px solid #B88846;
     border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%231C1616' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
-  }
-  
-  
-  
+}
+
+.bigMobileTitle {
+    font-size: 62px!important;
+}
+
+.shootingman {
+    max-width: 360px;
+    position: absolute;
+    top: 160px
+}
+.shoottext{
+text-align: right;
+}
+/* Use a media query to add a breakpoint at 800px: */
+.circleIMGMobile{
+    display: none;
+}
+.mobileHamick{
+    display: none;
+}
+@media screen and (max-width: 800px) {
+    .mainTitle {
+        font-size: 24px!important;
+    }
+    .mainTitle .grunge {
+        font-size: 24px!important;
+    }
+    .news {
+        padding: 12px!important;
+    }
+    .newsBodyContainer {
+        padding: 10px!important;
+    }
+    .dropCap:first-letter {
+        all: unset;
+    }
+    .column {
+        width: 95%!important;
+    }
+    .bigMobileTitle {
+        font-size: 42px!important;
+    }
+    .shootingman {
+        max-width: 165px;
+        position: absolute;
+        top: 123px;
+    }
+    .shoottext{
+        text-align: right;
+        font-size: 30px;
+        max-width: 190px;
+        margin: 0 auto;
+        margin-right: 0;
+    }
+    .circleIMG{
+        display: none;
+    }
+    .headerMobile{
+        font-size: 45px!important;
+    }
+    .mobileHamick{
+        width: 70px;
+    }
+    .hamick{
+        display: none;
+    }
+    .customSmall{
+        font-size: 28px!important;
+    }
+    .customSmall2{
+        font-size: 49px!important;
+
+    }
+    .wrap{
+        display: block;
+        overflow: unset;
+    }
+    .col1{
+        all:unset;
+    }
+    .col2{
+        all:unset;
+    }
+    .inner{
+        margin-right: 0!important;
+        margin-left: 0!important;
+    }
+    .circleIMGMobile{
+        display: block;
+
+    }
+}
