--- a/style.css
+++ b/style.css
@@ -289,7 +289,23 @@ p {
     width: 240px!important;
     margin-right: 20px;
 }
-
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+  }
+  
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 @media screen and (max-width: 800px) {
     .mainTitle {
         font-size: 24px!important;
